test/forgetCapture1.slq
def main(){
	x:=1:uint[10];
	def f(){ x:=x; } // error
	return f;
}
